Fix the container z-index to less than print button dropdown

--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ div.tm1-subnm-hierarchy-style ul {
 /* animating birds */
 	
 .container {
-	 z-index:9999;
+	 z-index:999;
 	position: fixed;
 	overflow: hidden;
 	display: block;
